--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "esbuild": "^0.24.0",
     "esbuild-plugin-clean": "^1.0.1",
-    "esbuild-plugin-copy": "^2.1.1"
+    "esbuild-plugin-copy": "^2.1.1",
+    "esbuild-sass-plugin": "^3.3.1"
+  },
+  "dependencies": {
+    "@symbiotejs/symbiote": "^2.3.2"
   }
 }
