--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "esbuild": "^0.24.0",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
-    "esbuild-sass-plugin": "^3.3.1"
+    "esbuild-plugin-tsc": "^0.4.0",
+    "esbuild-sass-plugin": "^3.3.1",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@symbiotejs/symbiote": "^2.3.2",
