--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-import-glob": "^0.1.1",
+    "esbuild-plugin-svg": "^0.1.0",
     "esbuild-plugin-tsc": "^0.4.0",
     "esbuild-sass-plugin": "^3.3.1",
     "typescript": "^5.6.2"
