--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "maxNodeModuleJsDepth": 2,
+    "target": "es5",
+    "lib": [
+      "ES2015",
+      "DOM"
+    ],
   },
   "include": [
     "src/js/**/*",
